[metadata]
name = PyImageViewer
version = 0.0.1
author = Stephen Schleising
author_email = stephen@schleising.net
description = Package to view images
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/schleising/PyImageViewer
project_urls =
    Bug Tracker = https://github.com/schleising/PyImageViewer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache 2
    Operating System :: OS Independent

[project]
name = PyImageViewer
version = 0.0.1

[options]
packages = ImageViewer
install_requires =
    pyglet==1.5.23

[options.entry_points]
console_scripts =
    ImageViewer = ImageViewer.ImageViewer:main
